@@ -456,3 +456,4 @@ Version 0.2.3
 * устранён шум при перемотке ape-файлов
 * исправлен русский перевод
 * исправлено падение при одновременном добавлении нескольких каталогов
+* исправлено добавление/удаление эффектов
